updates to content; improved styling; rough PromotionGrid/Item components done

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -19,7 +19,9 @@ $bp-lg: 1024px;
 $bp-sm-max: $bp-md - 1px;
 $bp-md-max: $bp-lg - 1px;
 
-
 // SITE CONTAINER DIMENSIONS
 $site-max-width: 940px;
 $site-hero-width: 1024px;
+
+//
+$promotion-padding-sm: 2em;
