--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -20,7 +20,7 @@ block contents
             img(src="/assets/img/fpo/dancipede-930x450.jpg")
 
 
-    .u-container
+    article.u-container
     
         p Did you ever wonder where ballet came from? This art form is really quite absurd when you take a look at it. Why do they walk like ducks and what are they doing with their arms, circles!? It just is not natural. And then there is modern dance. Is it all suffering? Why are they on the floor!? Get up and cheer up for goodness sake.
 
@@ -30,10 +30,12 @@ block contents
         
         p So, take a seat after the Parade or visiting every booth on Edgewood, be entertained and be impressed by the work of these accomplished and varied artists.
         
+        h3 The dance festival takes place on:
+        
         p 
-            | The dance festival takes place on: Saturday, #{globals.ipf.date.saturday.date} and Sunday, #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} at 4:00 pm and is located at the Trolley Barn at 963 Edgewood Ave NE. 
+            | Saturday, #{globals.ipf.date.saturday.date} and Sunday, #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} at 4:00 pm and is located at the Trolley Barn at 963 Edgewood Ave NE. 
             = ' '
-            a(href="https://www.google.com/maps/place/THE+TROLLEY+BARN/@33.756329,-84.356141,17z/data=!3m1!4b1!4m2!3m1!1s0x88f503ff905e1bed:0xc1626dc0cd684569") [map]
+            a(href="https://www.google.com/maps/place/THE+TROLLEY+BARN/@33.756329,-84.356141,17z/data=!3m1!4b1!4m2!3m1!1s0x88f503ff905e1bed:0xc1626dc0cd684569") [map it]
             
 
 block scripts
