--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -40,11 +40,54 @@ block contents
             
         .PromotionItemHero-text
             section
-                h2 Tour Homes
+                h2 Tour of Homes
                 p 
                     a(href="/events/tour-of-homes") Preview the homes chosen for the #{globals.ipf.date.year} Tour of Homes.
             .ArrowNav
                 a(href="/events/tour-of-homes") >
+    
+    ul.PromotionGrid.u-container.u-container--noPad
+        li.PromotionItem.alt-primary
+            section
+                h3 Join Our Volunteer Team Today.
+                
+                a.u-blockCentered.volspot(href="http://vols.pt/zbJaBt?utm_source=group-badge-signups-orange")
+                    img(src="//vspot.s3.amazonaws.com/groups/sharing/button_orange.png" alt="Click to View Our Sign-ups on VolunteerSpot")
+        
+        li.PromotionItem
+            section
+                h3 Festival Artwork Chosen
+                
+                p
+                    a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
+            
+            .ArrowNav
+                a(href="#") >
+
+        //- DISPLAY WHEN ARTWORK CHOSEN
+        //- li.PromotionItem
+        //-     section
+        //-         h3 Festival Artwork Chosen
+        //-         
+        //-         p
+        //-             a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
+        //-     
+        //-     .ArrowNav
+        //-         a(href="#") >
+
+        li.PromotionItem.alt-secondary
+            section
+                h3 Follow Festival Online
+                nav.social-icons
+                    a(href="https://www.facebook.com/InmanParkFestival/" target="_blank") 
+                        span.icon.-facebook
+                            span.u-visuallyhidden Facebook
+                    a(href="http://twitter.com/InmanParkFest" target="_blank") 
+                        span.icon.-twitter
+                            span.u-visuallyhidden Twitter: @inmanparkfest
+                    a(href="https://www.instagram.com/" target="_blank")
+                        span.icon.-instagram
+                            span.u-visuallyhidden Instagram
 
 
 block scripts
