--- a/src/html/lost-and-found/index.jade
+++ b/src/html/lost-and-found/index.jade
@@ -1,13 +1,14 @@
 extends ../templates/layout.jade
 
 block pageVars
+    - var selectedNav = 'lost & found'
 
 block title
     title #{globals.ipf.title} | Lost and Found
 
 block contents
 
-    .u-container
+    article.u-container
 
         h1 Lost and Found
 
