--- a/src/html/market/arts-crafts-market/index.jade
+++ b/src/html/market/arts-crafts-market/index.jade
@@ -5,7 +5,7 @@ block title
 
 block contents
 
-    .u-container
+    article.u-container
 
         h1 Arts & Crafts Market
         
@@ -13,7 +13,10 @@ block contents
         
         p Our juried Arts and Crafts Show includes more than 150 fine artists working in sculpture, paintings, and photography.
 
-        p Below are last year's Arts & Crafts vendors.
+        p This year's Street Market vendors will be listed below as soon as they are chosen.
+
+        p
+            em (showing vendors for sake of design review)
         
         ul.Vendors
             each vendor in vendors.ac.lines
