--- a/src/html/privacy-policy/index.jade
+++ b/src/html/privacy-policy/index.jade
@@ -5,7 +5,7 @@ block title
 
 block contents
 
-    .u-container
+    article.u-container
         h1 Privacy Policy
 
         p We don't have one. Ditch this or create one? Ask Lisa.
