--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -8,7 +8,7 @@ block title
 
 block contents
 
-    .u-container
+    article.u-container
     
         h1 Festival Thrives on Volunteers
             
