--- a/src/assets/css/common/_utilities.scss
+++ b/src/assets/css/common/_utilities.scss
@@ -38,3 +38,20 @@
     display: block;
     text-align: center;
 }
+
+.u-visuallyhidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px; width: 1px;
+    margin: -1px; padding: 0; border: 0;
+}
+
+.volspot {
+    display: block;
+    margin: 2em 0 1em;
+
+    img {
+        width: 95%;
+    }
+}
