--- a/src/assets/css/components/_promotionItemHero.scss
+++ b/src/assets/css/components/_promotionItemHero.scss
@@ -2,15 +2,24 @@
     display: flex;
     flex-direction: column;
 
+    h2 {
+        font-size: 3em;
+        margin-top: 1.75rem;
+    }
+
     @media screen and (min-width: $bp-lg) {
         align-items: stretch;
         flex-direction: row;
+
+        h2 {
+
+        }
     }
 }
 
 .PromotionItemHero-image {
     @media screen and (min-width: $bp-lg) {
-        flex-basis: 66%;
+        flex-basis: 66.6666%;
     }
 
     img {
@@ -23,16 +32,17 @@
     position: relative;
 
     > section {
-        padding-left: 1.5em;
-        padding-right: 1.5em;
+        padding-left: $promotion-padding-sm;
+        padding-right: $promotion-padding-sm;
     }
 
     @media screen and (min-width: $bp-lg) {
-        flex-basis: 34%;
+        flex-basis: 33.3333%;
 
         > section {
             padding-left: 2em;
             padding-right: 2em;
+            padding-bottom: 3em;
         }
 
         .ArrowNav {
