--- a/src/html/events/index.jade
+++ b/src/html/events/index.jade
@@ -24,31 +24,29 @@ block contents
             img(src="/assets/img/fpo/painty-face-930x450.jpg")
             
     
-    .u-container
+    article.u-container
 
-        article
+        p The Inman Park Spring Festival includes many different events to suit all interests:
 
-            p The Inman Park Spring Festival includes many different events to suit all interests:
-
-            ul
-                li 
-                    a(href="/events/tour-of-homes") a tour of historic and beautiful neighborhood homes
-                li 
-                    a(href="/events/parade") the best festival parade in town
-                li 
-                    a(href="/events/music") three stages of music all weekend
-                li 
-                    a(href="/events/dance") dance performances by local professional dance groups
-                li 
-                    a(href="/events/kidzone") a kidzone space for kids to play
+        ul
+            li 
+                a(href="/events/tour-of-homes") a tour of historic and beautiful neighborhood homes
+            li 
+                a(href="/events/parade") the best festival parade in town
+            li 
+                a(href="/events/music") three stages of music all weekend
+            li 
+                a(href="/events/dance") dance performances by local professional dance groups
+            li 
+                a(href="/events/kidzone") a kidzone space for kids to play
 
 
-            p No matter what event or activity brings you to festival, plan to spend the day or weekend in the neighborhood as there is much to see and do.
+        p No matter what event or activity brings you to festival, plan to spend the day or weekend in the neighborhood as there is much to see and do.
 
-            p 
-                span.Note this would only display when tickets are available to sell
-                | Ready to buy Tour of Homes tickets? 
-                a(href="#") Get them here.
+        //- p 
+        //-     span.Note this would only display when tickets are available to sell
+        //-     | Ready to buy Tour of Homes tickets? 
+        //-     a(href="#") Get them here.
 
 block scripts
     script.
