--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -20,7 +20,7 @@ block contents
         div
             img(src="/assets/img/fpo/nicole-930x450.jpg")
     
-    .u-container
+    article.u-container
     
         p Come see our Butterfly, Trash Monarch, Precision Attache Case Drill Team, and <a href="http://seedandfeed.org/" target="_blank">Seed & Feed Marching Abominables</a> take to the street in the city's funkiest and most eclectic spring parade. This favorite of Festival begins at Edgewood and Euclid on Saturday #{globals.ipf.date.saturday.date} at #{globals.events.parade.time} (rain or shine) and runs to Austin Ave. at the foot of Little Five Points.
 
