--- a/src/html/food/index.jade
+++ b/src/html/food/index.jade
@@ -15,11 +15,11 @@ block contents
         h2 Food Vendors
         
         p 
-            | The #{globals.ipf.title} has many food vendors that offer pizza, barbecue, gyros, sausages, sandwiches, and other street festival staples. After you've dined at one of several food vendor sections, grab a funnel cake or a
+            | The #{globals.ipf.title} has many food vendors that offer pizza, barbecue, gyros, sausages, sandwiches, and other street festival staples. After you've dined at one of several food vendor sections, grab a funnel cake or a popsicle at 
             = ' '
             a(href="http://atlanta.kingofpops.net" target="_blank") King of Pops
             = ' '
-            | popsicle to satisfy your sweet tooth. 
+            | to satisfy your sweet tooth. 
         
         
         h2 Local Restaurants
