--- a/src/html/market/index.jade
+++ b/src/html/market/index.jade
@@ -8,7 +8,7 @@ block title
 
 block contents
 
-    .u-container
+    article.u-container
 
         h1 Arts & Crafts Show and Street Vendors
         
