--- a/src/html/market/street-market/index.jade
+++ b/src/html/market/street-market/index.jade
@@ -4,7 +4,7 @@ block title
     title #{globals.ipf.title} | Street Market
 block contents
 
-    .u-container
+    article.u-container
     
         h1 Street Market
         
@@ -13,4 +13,4 @@ block contents
         
         p Atlanta's largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items — everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
 
-        p Below are last year's Street Market vendors.
+        p This year's Street Market vendors will be listed below as soon as they are chosen.
