added initial meta:og tags

--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -14,6 +14,12 @@ html(lang="en")
         link(href='https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Playfair+Display:400italic' rel='stylesheet' type='text/css')
         link(href='/assets/css/plugins.css', rel='stylesheet' type='text/css')
         link(href='/assets/css/main.css', rel='stylesheet' type='text/css')
+        
+        meta(property="og:title" content="Inman Park Festival")
+        meta(property="og:description" content="Atlanta's Favorite Street Festival with a Parade, Live Bands, Dancing, Food, Drink and the always-popular Tour of Homes")
+        meta(property="og:image" content="http://inmanparkfestival.org/assets/img/")
+        meta(property="og:url" content="http://inmanparkfestival.org")
+        meta(name="twitter:card" content="summary_large_image")
 
     body
 
