--- a/src/html/food/index.jade
+++ b/src/html/food/index.jade
@@ -8,7 +8,7 @@ block title
 
 block contents
 
-    .u-container
+    article.u-container
 
         h1 Where to Eat and Drink During Festival
         
