--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -35,8 +35,8 @@ block contents
                 p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
 
     .PromotionItemHero.u-container.u-container--noPad
-        .PromotionItemHero-image
-            img(src="assets/img/fpo/big-house.jpg" alt="Tour Home")
+        .PromotionItemHero-image.image--big-house
+            //- img(src="assets/img/fpo/big-house.jpg" alt="Tour Home")
             
         .PromotionItemHero-text
             section
