--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -4,6 +4,10 @@ $brand-yellow: rgb(254, 202, 56);
 $brand-green: rgb(159, 199, 90);
 $brand-grey-dark: rgb(45, 45, 45);
 
+$link-color: $brand-green;
+$link-hover-color: rgba($brand-green, 0.15);
+
+
 // TYPOGRAPHY
 $base-font-size: 16px;
 $base-font-color: $brand-grey-dark;
