--- a/src/assets/css/common/_promo.scss
+++ b/src/assets/css/common/_promo.scss
@@ -100,6 +100,7 @@ $promo-padding: 3rem;
         color: $brand-white;
         background-color: $brand-grey-dark;
         text-align: center;
+        text-decoration: none;
 
         &:hover {
             background-color: lighten($brand-grey-dark, 30%);
