--- a/src/assets/css/components/_promotionGrid.scss
+++ b/src/assets/css/components/_promotionGrid.scss
@@ -37,6 +37,11 @@
             color: $brand-white;
             letter-spacing: 0.1em;
         }
+
+        a {
+            text-decoration: none;
+            background-color: transparent;
+        }
     }
 
     &.alt-primary {
@@ -45,6 +50,11 @@
 
     &.alt-secondary {
         background-color: $brand-yellow;
+    }
+
+    &.alt-tertiary {
+        // border: 1px solid rgba(0, 0, 0, 0.1)
+        background-color: rgba(0, 0, 0, 0.05);
     }
 
     @media screen and (min-width: $bp-lg) {
@@ -63,6 +73,70 @@
             position: absolute;
             bottom: 0;
             right: 0;
+        }
+    }
+}
+
+
+.PromotionItemSolo {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+
+    @media screen and (min-width: $bp-lg) {
+        margin: 0 auto;
+        align-items: stretch;
+        flex-direction: row;
+    }
+}
+
+.PromotionItemSolo-header {
+    padding-top: $promotion-padding-sm;
+    padding-right: $promotion-padding-sm;
+    padding-left: $promotion-padding-sm;
+    background-color: $brand-green;
+
+    h3 {
+        margin-top: 0;
+        padding-right: 2em;
+        font-family: $base-font-family-sans-serif;
+        font-size: 1.75em;
+        color: $brand-white;
+    }
+
+    @media screen and (min-width: $bp-lg) {
+        width: 33.3333%;
+
+        h3 {
+            padding-top: 1em;
+            padding-right: 0;
+        }
+    }
+}
+
+.PromotionItemSolo-content {
+    padding-right: $promotion-padding-sm;
+    padding-left: $promotion-padding-sm;
+    padding-bottom: $promotion-padding-sm;
+    background-color: $brand-green;
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    @media screen and (min-width: $bp-lg) {
+        width: 66.6666%;
+        padding-top: $promotion-padding-sm;
+        background-color: $brand-white;
+
+        ul {
+            font-size: 1.25em;
+        }
+
+        li > small {
+            display: block;
         }
     }
 }
