content updates; social icon styling; tour of homes text

--- a/src/assets/css/pages/_tour.scss
+++ b/src/assets/css/pages/_tour.scss
@@ -1,5 +1,5 @@
 .TourHomes {
-    
+    margin-bottom: 3em;
     list-style: none;
 
     > li {
@@ -13,4 +13,8 @@
             display: block;
         }
     }
+}
+
+.TourHomeImage {
+    width: 100%;
 }
