--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -18,7 +18,7 @@ block contents
         
         dl.FaqList
             dt Q. When does festival take place?
-            dd A. The Inman Park Spring Festival always take place on the last weekend of April. This year it runs from April 30 – May 1.
+            dd A. The Inman Park Spring Festival always take place on the last weekend of April. This year it runs from #{globals.ipf.date.saturday.date} - #{globals.ipf.date.sunday.date}.
             
             dt Q. What are the hours?
             dd A. On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
@@ -27,7 +27,7 @@ block contents
             dd A. The parade occurs on Saturday at 2:00 p.m.
 
             dt Q. Are Pets Allowed?
-            dd A. Please remember that, by City of Atlanta Ordinance, pets are not allowed at Festivals, "unless part of a planned festival program or assisting persons with disabilities". This prohibition includes "dogs, cats, snakes, birds, pigs, etc.", and applies whether or not the pet is leashed. As the ordnance says, this is for the pet's protection as well as for the protection of festival patrons. Thanks!!
+            dd A. Please remember that, by City of Atlanta Ordnance, pets are not allowed at Festivals, "unless part of a planned festival program or assisting persons with disabilities". This prohibition includes "dogs, cats, snakes, birds, pigs, etc.", and applies whether or not the pet is leashed. As the ordnance says, this is for the pet's protection as well as for the protection of festival patrons. Thanks!!
         
         h2 Tour of Homes Tickets 
         
@@ -45,13 +45,16 @@ block contents
             dd A. 11:00AM to 6:00PM on Saturday and Sunday
 
             dt Q. How can I become an exhibitor?
-            dd A. Complete the application and form available on the Become an Exhibitor page
+            dd 
+                | A. Complete the application and form available on the 
+                a(href="/market/become-an-exhibitor") Become an Exhibitor page
 
             dt Q. When is the application deadline?
-            dd A. The postmark deadline is March 11, 2016.
+            dd A. The deadline is March 10, 2016.
 
+            //- TODO Put the application dates into the global data
             dt Q. When will I find out if I have been accepted into the Market?
-            dd A. All applicants will be notified no later than April 6, 2016.
+            dd A. All applicants will be notified no later than March 17, 2016.
         
         
         h2 Events 
