--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -14,7 +14,7 @@ block contents
     .Hero
         p Fun Kidzone photos go here
     
-    .u-container
+    article.u-container
     
         p Festival provides a dedicated space for kids to play that includes slides, obstacles courses, crafts, a great playground, riding toys for our youngest guests and the CHANCE TO JOIN A CIRCUS, all of them FREE! 
         
