--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -32,7 +32,7 @@ block contents
         blockquote Take in a parade with personality. (Intown Atlanta) Inman Park Spring Festival's parade is a people watching paradise. Colorful costumes, creative themes, and the Seed & Feed Marching Abominable invite spring with sass and funk.
 
         p 
-            a(href="#") Download the Parade Application
+            a(href="/assets/static/archive/2017/2017-Parade-Application.pdf") Download the Parade Application
             = ' '
             | if you'd like to register to march in the parade.
 
