--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -85,9 +85,9 @@ block contents
                     a(href="http://twitter.com/InmanParkFest" target="_blank") 
                         span.icon.-twitter
                             span.u-visuallyhidden Twitter: @inmanparkfest
-                    a(href="https://www.instagram.com/" target="_blank")
+                    a(href="https://www.instagram.com/inmanparkfest" target="_blank")
                         span.icon.-instagram
-                            span.u-visuallyhidden Instagram
+                            span.u-visuallyhidden Instagram: @inmanparkfest
 
 
 block scripts
