--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -15,14 +15,14 @@ block contents
         p As those of you who visit our neighborhood regularly know, parking in Inman Park is becoming a bit more difficult. We strongly encourage you to avoid parking in Inman Park or in the adjacent neighborhoods. Please consider using any of the following options instead of driving directly here:
         
         ul
-            li Walk/bike the beltline if you can – it’s really the best way to get here 
+            li Walk/bike the beltline if you can - it's really the best way to get here 
             li Marta to the Inman Park/Reynoldstown Station
             li Drive to a Marta station near Inman Park (Edgewood/Candler Park, East Lake) and then take Marta just 1 or 2 stops to our station
             li Lyft/Uber/Taxi
         
         h2 Parking
         
-        p There almost no parking in the neighborhood during festival and many streets will be closed. 
+        p There is almost no parking in the neighborhood during festival and many streets will be closed. 
         
         
         h2 Bike
