--- a/src/assets/css/components/_promotionGrid.scss
+++ b/src/assets/css/components/_promotionGrid.scss
@@ -46,10 +46,18 @@
 
     &.alt-primary {
         background-color: $brand-green;
+
+        a:hover, a:focus {
+            color: darken($brand-green, 30%);
+        }
     }
 
     &.alt-secondary {
         background-color: $brand-yellow;
+
+        a:hover, a:focus {
+            color: darken($brand-yellow, 30%);
+        }
     }
 
     &.alt-tertiary {
