--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -19,26 +19,134 @@ block contents
         
         ul
             li Kids under 12 years get free Home Tour tickets but have to be under constant supervision of an adult.
-            li If you buy tickets online, you must print out your PayPal confirmation and bring it to Festival in order to exchange it for your Tour of Homes ticket(s). <strong>Or whatever is new for this year</strong>
+            li If you buy tickets online, you must print out your PayPal confirmation and bring it to Festival in order to exchange it for your Tour of Homes ticket(s). <span class="Todo">TODO: How is this handled this year?</span>
             li Tour tickets are valid the entire weekend of festival but each house can only be visited once per ticket.
+            //- TODO put discount amount in global data
             li Discounted Home tour tickets ($5.00 off) are available until noon on the Friday Festival starts.
+            li.Todo Do we say anything about neighborhood discount and the ipna site?
         
-        if globals.tour.active
-            h2 This Year's Homes
-        else
-            h2 Last Year's Homes    
-            p Next year's homes on tour will be posted once the list of homes is finalized.
+        h2 This Year's Homes
+        
+        //- h2 Last Year's Homes    
+        //- p Next year's homes on tour will be posted once the list of homes is finalized.
         
     ul.TourHomes.u-container
-        - var n = 0
-        while n < 6
-            - n++
-            li
-                h3
-                    | Home Owner Names #{n}
-                    small Home Address #{n}
+
+        li
+            h3
+                | 100 Waverly Way
+                small Eleanor Matthews
+            
+            .PlaceholderImage home image
                 
-                .PlaceholderImage home image #{n}
-                
-                p Home descriptive text.
-                            
+            p Built on the former horse stable and tennis courts of the adjoining Ernest Woodruff mansion, this 1912 home was built as the honeymoon cottage for Ernest's son, Robert Woodruff, the philanthropist and Coca-Cola President, and his wife, Nell. The home has maintained its original design and architectural details despite an eclectic series of residents over the years, including members of the Allman Brothers Band. (Sightings of Duane Allman’s ghost have been reported.)
+
+            p Eleanor and her three children moved from Sandy Springs in 1985 and began restoring plaster walls and moldings, along with sanding floors and updating the kitchen and bathrooms. Operated now as a bed and breakfast, the upstairs (not on tour) includes two bedrooms, two baths, and an open loft space. On the main level, please note the wonderful windows, fireplace, and large, open central hallway, forty feet in length, which gives a spacious feeling to this cozy cottage. Eleanor, who is a city planner, uses the library in her home as her office space.
+
+            p As you leave through the back, enjoy the quiet garden space and meet Bob, the duck. Rescued three years ago, Bob has his own pool and play area. Bob is a natural show-off. Eleanor is affectionately known as Mother Goose for her care and oversight of the many ducks, turtles and geese that inhabit the pond in nearby Springvale Park.
+
+            p After touring you will understand why Eleanor, when asked what she loved most about her home, replied, "Everything!"
+        
+        li
+            h3 
+                | 944 Euclid Avenue
+                small Sharon Gay & Neil Schemm
+            
+            .PlaceholderImage home image
+
+            p Today it is hard to believe this lovely 1896 Queen Anne was a condemned five-unit boarding house when it was rescued from the wrecking ball in 1971. Happily, its distinctive styling had never been compromised, and most of the original fabric survived, including moldings, mantels, floors, and even light fixtures. Successive owners had completed structural renovations and many cosmetic improvements when Sharon Gay and Neil Schemm bought the house just before their 1985 wedding. But when Sharon’s heel penetrated the front porch during the reception, they knew the work wasn’t finished. 
+
+            p During their three decades here, Sharon and Neil have enhanced their home. They gutted and rebuilt one bath and added another in a turn-of-the-century style that blends both remodeling and new construction into the old fabric. Sharon has landscaped the back yard, adding stone terraces and paths, waterfall, pond, and tropical garden. Their love of the Caribbean, suggested by the Haitian art that sets off English and American antiques, family crafts, and heirlooms upstairs, asserts itself in the "full-on-Caribbean" basement, where Sharon and Neil replaced an apartment—adding a sunroom, joint office, and gym.
+
+            p Last year, Sharon and Neil gutted and replaced the kitchen and extended it into a sunny den atop a new 14-foot-above-grade foundation. They selected period-appropriate heart pine for the floors, and they mixed marble with stainless steel to keep the counters from looking too contemporary. But their traditional-looking cabinets hide "tons of storage" for everything, including dining-room-table leaves. The soft, rich color scheme came from Provençal table linens Sharon bought on vacation—in the Caribbean. 
+
+
+
+        li
+            h3
+                | #4 has photo, no text
+                small
+
+        li
+            h3 
+                | 956 Waverly Way
+                small Anne Smith and Jorge Cora
+            
+            .PlaceholderImage home image
+
+            p Built by H.R. Harris, founder of the Trio Steam Laundry—whose headquarters in nearby Old Fourth Ward was itself the subject of a recent preservation battle—this 1910 house occupies almost an acre of land. The estate once included a tennis court, three-story carriage house, bubbling springs, and rose garden. Over the decades, the house deteriorated into a neglected five-unit rental property. 
+
+            p In 1971, Philip Flaig rescued and restored the house. He also removed the main staircase and added a side staircase leading to two rental units. In the late 1980s he added the kitchen, family room, and master bed- and bathroom. Brenda Isaac bought the house in 1993 and made further enhancements while preserving the integrity of the three main-floor rooms—the blended entry-living room, formal dining room, and library. 
+
+            p New owners Anne and George began further renovations in 2015, gutting and remodeling the kitchen and removing the wall separating the kitchen and family rooms. They had the elegant master suite redesigned to create better flow and the hallway reconfigured to incorporate a new powder room. Notable details include original antique pine floors in the front rooms, five fireplaces, and custom leaded windows, with a design that is repeated throughout the house. The walnut dining furniture was custom made for Anne’s grandparents as a wedding gift in the 1920’s. Take time to enjoy the beautiful back yard with its wide variety of plantings, stonework, koi pond, and putting green. Anne and George absolutely love their new home and the history it embodies.
+
+
+        li
+            h3
+                | 210 Elizabeth Street
+                small Tracy Steen and Robert Long
+            
+            .PlaceholderImage home image
+
+            p Tracy Steen and Robert Long’s house exemplifies Atlanta’s First Suburb, with its generous front porch and view of downtown Atlanta’s skyline from the back deck. Despite several decades as a boarding house, this American Foursquare variant, built in 1910 by D. E. Patterson (founder of Patterson Lumber), has miraculously retained its pocket doors, heart-pine floors, and some original moldings, as well as the brick fireplace, leaded-glass windows, and stained-glass panel in the entryway. It has been on tour four times since 1972.
+
+            p The house was rescued in 1972 and renovation/restoration began soon after. During the 1970s, neighborhood artist Christine Sibley created the scenic tile surround on one of the five upstairs fireplaces. The next owners bought the house in 1979 and restored it to a single-family home in 1986. They also added a family room, guest room, and deck in the 1980s.
+
+            p Tracy and Robert and their family (two children, Pickle the dog, Porky Pig the cat, and Bullseye the lizard) moved here in 2013 from their first Inman Park house, on Euclid Avenue. They landscaped the back yard, which had been left empty after a carriage house burned in the 1970s. "We love the garden," they say. "It connects to our neighbors’ back yards but seems entirely private and has a great view of the downtown skyline, especially at night. We also love the details throughout that mark different owners over the years—even the scars on the doors where locks were installed during the boarding-house days."
+
+
+        li
+            h3
+                | 242 Elizabeth Street
+                small Scott Reynolds
+            
+            .PlaceholderImage home image
+            
+            p This house appeared in Inman Park’s first tour of homes in 1972 and has reappeared at least three times since. Each time it has a little more to offer. Current owner Scott Reynolds agreed to another showing after completing a major renovation that included a new kitchen, which flows through glass doors into a cozy screened back porch. He turned one bathroom into a designer master bath with a deep contemporary claw-foot tub and converted a closet into a guest bath. The result is a perfect combination of old and new that makes this a home for entertaining.
+
+            p The design for the house, which was built in 1910 for a furniture maker, is similar to one in local architect Leila Ross Wilburn’s Southern Homes and Bungalows, published in 1914. Although this house predates the book, its original floor plan matches one in a 1910 Wilburn house in Decatur’s MAK historic district. (MAK is named for McDonough and Adams Streets and Kings Highway.)
+
+            p As you tour, enjoy the large stained-glass window in the hall. The chandelier in the dining room is a 19th century New Orleans original, which was converted from gas to electric. Many hints of New Orleans reflect the city where Scott grew up, including artwork throughout and a framed paper bag in the kitchen from New Orleans’ former Schwegmann supermarket. Scott and his boxer, Jack, have lived here for three years. Their favorite spot is the front porch where, in true Inman Park fashion, they spend as much time as possible. 
+
+
+        li
+            h3
+                | 245 North Highland Avenue #304
+                small Kurt and Beverly Miller
+
+            .PlaceholderImage home image
+            
+            p The Millers’ industrial-style condo was built in 2006 as part of a mixed-use development on the site of the Mead Paper Company plant. To make possible this pleasant two-bedroom space—originally two one-bedroom units—all the stars had to align. Few units in this building can be combined, but these units were only separated by an expansion joint, so the wall between them could be removed. When one unit became available, the Millers bought it and traded their original unit with their neighbor and now dear friend Patrick. They personalized their space by having the concrete floors ground, stained, and coated and had their contractor add a modern picture rail made of metal pipe. 
+
+            p The Millers have found the condo the perfect size, but moving here required aggressive downsizing, so they kept only things that matter most and mixed their antiques with new pieces, weaving their traditional belongings into this contemporary space. Surely the epitome of this blending is the bar in the kitchen made from Beverly’s grandmother’s upright piano, its keys and pedals showing generations of wear. The site’s history is commemorated with a framed felt Blue Horse patch in the kitchen, a relic of Beverly’s childhood pastime collecting trading stamps from Mead’s Blue Horse notebook paper. 
+
+            p The Millers love living in a micro-community within Inman Park, where they have learned to appreciate the simplicity of a smaller space that keeps close their beloved heirlooms and art, much of it by relatives. They enjoy the plentiful light and the view of the park below, where they walk their dogs, Piper and Matilda. 
+
+        li
+            h3
+                | 822 Lake Avenue
+                small Fergal and Janet Kearns 
+            
+            .PlaceholderImage home image
+            
+            p Built as part of the diverse complex that occupies the former Mead Paper Company site, this house exemplifies modern Inman Park construction that respects the neighborhood's historic designation. Combining the new and the old has kept this part of town vibrant, and homeowners Fergal and Janet Kearns add an international component. Fergal is from Ireland and Janet is from Korea. They have lovingly decorated this 2005 craftsman-style home with art from around the world, which they have picked up on their travels. Look for paintings from China, Brazil, Cameroon, Chile, and Ireland, as well as works by Atlanta artists.
+
+            p Janet and Fergal moved from New York to Inman Park eleven years ago. They chose the neighborhood because, like much of New York, it's walkable, vibrant, and has lots to offer. First they lived in a loft nearby, but when their first son was on the way, eight years ago, it was time for more space.
+
+            p They expanded both their family, which now also includes a two-year-old baby brother, and their house from 3500 to 5300 square feet by building out the unframed basement. There you will find a playroom, a kitchenette, a workout room, a full bath, a bonus room, and a mini movie theater with a real popcorn maker. It's where the family gathers many Friday evenings for their weekly movie night. Another favorite place is the cozy courtyard, which they landscaped with flagstone. From there you can see the apartment on top of the garage.
+
+        li
+            h3
+                | 1015 Edgewood Avenue
+                small Inman Park Methodist Church
+                small Reverend Max Vincent, Minister
+            
+            img.TourHomeImage(src="/assets/img/fpo/umc-16x9.jpg" alt="Inman Park Methodist Church")
+            
+            p After the end of the Civil War ended, building supplies and money were in short supply. Yet a small group of parishioners gathered to meet— first in homes, then in a small brush arbor, and finally in a wood-frame church in the Edgewood community. In 2015, with several members of the early families in attendance, the Inman Park Methodist Church celebrated its 150th anniversary as a congregation. 
+
+            p Twenty-three-year-old architect Willis Franklin Denny II (1874–1905) designed the current sanctuary building in a Romanesque-style structure of Stone Mountain granite at a cost of $12,620. The cornerstone for the building was laid on September 6, 1897, and the building was dedicated on April 17, 1898. 
+
+            p Note the original furniture and architectural details. Coca-Cola Corporation founder Asa Candler commissioned one of the large stained-glass windows as a tribute to his mother, Martha Beall Candler, at a cost of $125. He had it inscribed, "She hath done what she could." Large patches of the original "Denny Blue" calcimine paint can still be seen. The chipping plaster remains a stark reminder of many years of deferred maintained when the neighborhood and congregation were in decline. Fortunately, the church now flourishes, attracting many young families and residents new to the area. 
+
+            p Service to the community is a strong tradition in Inman Park. It was at the altar of this church that Methodist Bishop Warren Candler accepted a check for one million dollars from his brother, Asa Candler, to found Emory University. 
