--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -16,6 +16,7 @@
 @import 'common/vendor';
 @import 'common/social-icons';
 
+@import 'components/header';
 @import 'components/pageIntro';
 @import 'components/promotions';
 
