--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -12,12 +12,16 @@ block contents
         mixin tertiaryNav(globals.events.nav, "dance")
     
     .Hero.owl-carousel.owl-theme
-            
+
+        
         div
-            img(src="/assets/img/fpo/dance-toes-930x450.jpg")
-            
+            mixin slideImage('dance-blue-line_l68jcc')
         div
-            img(src="/assets/img/fpo/dancipede-930x450.jpg")
+            mixin slideImage('dance-chair_ycmlwo')
+        div
+            mixin slideImage('dance-y')
+        div
+            mixin slideImage('dance-ballerinas_hpobmv')
 
 
     article.u-container
