updated subnavigation markup and styles (markets, events)

--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.events.nav, "dance")
+
     .u-container
     
         h1 Inman Park Dance Festival
-        
-        mixin tertiaryNav(globals.events.nav, "dance")
     
     .Hero.owl-carousel.owl-theme
 
