--- a/src/html/events/index.jade
+++ b/src/html/events/index.jade
@@ -8,11 +8,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.events.nav)
+
     .u-container
     
         h1 Festival Events
-        
-        mixin tertiaryNav(globals.events.nav)
         
     .Hero.owl-carousel.owl-theme
             
