--- a/src/html/events/music/index.jade
+++ b/src/html/events/music/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.events.nav, "music")
+
     .u-container
     
         h1 Live Music at the Inman Park Festival
-        
-        mixin tertiaryNav(globals.events.nav, "music")
     
     .Hero
         p Band/Stage promos
