--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.events.nav, "parade")
+
     .u-container
     
         h1 Inman Park Festival Parade
-        
-        mixin tertiaryNav(globals.events.nav, "parade")
     
     .Hero.owl-carousel.owl-theme
             
