--- a/src/html/market/arts-crafts-market/index.jade
+++ b/src/html/market/arts-crafts-market/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.markets.nav, "arts & crafts")
+
     article.u-container
 
         h1 Arts & Crafts Market
-        
-        mixin tertiaryNav(globals.markets.nav, "arts & crafts")
         
         p Our juried Arts and Crafts Show includes more than 150 fine artists working in sculpture, paintings, and photography.
 
