--- a/src/html/market/become-an-exhibitor/index.jade
+++ b/src/html/market/become-an-exhibitor/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.markets.nav, "become an exhibitor")
+
     article.u-container
     
         h1 Become an Exhibitor
-        
-        mixin tertiaryNav(globals.markets.nav, "become an exhibitor")
         
         p We have moved the Inman Park Festival application process to ZAPPlication, and will no longer accept paper applications.
 
