--- a/src/html/market/community-corner/index.jade
+++ b/src/html/market/community-corner/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.markets.nav, "community corner")
+    
     article.u-container
     
         h1 Community Corner
-        
-        mixin tertiaryNav(globals.markets.nav, "community corner")
         
         p Non-profit organization may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profit) are accepted based on availability on first come, first serve basis.
 
