--- a/src/html/market/index.jade
+++ b/src/html/market/index.jade
@@ -8,11 +8,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.markets.nav)
+
     article.u-container
 
         h1 Arts & Crafts Show and Street Vendors
-        
-        mixin tertiaryNav(globals.markets.nav)
         
         p If you're looking for gifts, new clothes, art for your house or just about anything else, you are likely to find what your looking for at one of the many vendor booths lining the tree-shaded streets during the Inman Park Festival.
         
