--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -70,6 +70,10 @@
     padding-right: 0.5em;
     text-align: right;
 
+    &:hover, &:focus {
+        background-color: darken($brand-grey-dark, 5%);
+    }
+
     h1 {
         margin: 1em 0 0;
         font-size: 1em;
@@ -83,7 +87,7 @@
 
     @media (min-width: $bp-md) {
         padding-right: 0;
-        
+
         h1 {
             font-size: 1.25em;
             margin-top: 1.25em;
@@ -139,6 +143,10 @@
     font-size: 0.75em;
     text-transform: uppercase;
     letter-spacing: 1px;
+
+    @media (min-width: $bp-md) {
+        padding: 0.5em;
+    }
 }
 .SiteNav-utilities a:last-child {
     margin-right: 0;
@@ -178,44 +186,44 @@
     }
 }
 
-.SiteNav-secondary-background {
-    @media (min-width: $bp-md) {
-        background-color: #555;
-    }
+.SecondaryNavContainer {
+    border-bottom: 1px solid lighten($brand-grey-dark, 50%);
 }
 
-.SiteNav-secondary {
+.SecondaryNav {
     display: block;
     width: 100%;
-    padding: 0.25em 0.5em;
+    padding: 0 0.5em;
     overflow-x: auto;
     white-space: nowrap;
-    background-color: #bbb;
 
     @media (min-width: $bp-md) {
+        margin: 0 auto;
+        max-width: $site-max-width;
         text-align: right;
         background-color: transparent;
     }
 }
 
-.SiteNav-secondary a {
+.SecondaryNav a {
     display: inline-block;
-    margin-right: 1em;
+    margin-right: 1.5em;
+    padding: 0.5em 0.25em;
     font-size: 0.75em;
     text-decoration: none;
     text-transform: uppercase;
+    color: $brand-grey-dark;
+
+    &:hover, &:focus, &.is-selected {
+        background-color: $brand-yellow;
+    }
 
     @media (min-width: $bp-md) {
         margin-right: 1.5em;
-        padding: 0.4em 0;
-        color: white;
+        padding: 0.5em;
 
         &:last-child {
             margin-right: 0;
         }
     }
-}
-.SiteNav-secondary a:hover,
-.SiteNav-secondary a:focus {
-    text-decoration: underline;
 }
