--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -5,11 +5,11 @@ block title
 
 block contents
 
+    mixin secondaryNav(globals.events.nav, "kidzone")
+
     .u-container
     
         h1 Inman Park Festival Kidzone
-        
-        mixin tertiaryNav(globals.events.nav, "kidzone")
     
     .Hero
         p Fun Kidzone photos go here
