--- a/src/html/market/street-market/index.jade
+++ b/src/html/market/street-market/index.jade
@@ -4,12 +4,11 @@ block title
     title #{globals.ipf.title} | Street Market
 block contents
 
+    mixin secondaryNav(globals.markets.nav, "street market")
+
     article.u-container
     
         h1 Street Market
-        
-        mixin tertiaryNav(globals.markets.nav, "street market")
-
         
         p Atlanta's largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items — everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
 
