added 2017 artist page, style cleanup

--- a/src/assets/css/common/_common.scss
+++ b/src/assets/css/common/_common.scss
@@ -19,3 +19,20 @@
     color: magenta;
     font-style: italic;
 }
+
+.Button {
+    padding: 1.5em;
+    min-width: 13em;
+    background-color: $brand-white !important; // b/c of PromotionItem styling
+    color: $brand-grey-dark;
+    border: 1px solid $brand-white;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    &:hover, &:focus, &.is-selected {
+        background-color: $brand-white;
+        color: $brand-black !important; // b/c of PromotionItem styling
+        border: 1px solid $brand-grey-dark;
+    }
+}
