--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -19,6 +19,7 @@
 @import 'components/header';
 @import 'components/pageIntro';
 @import 'components/promotions';
+@import 'components/questionnaire';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
