--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -41,34 +41,24 @@ block contents
             .ArrowNav
                 a(href="/events/tour-of-homes") >
     
+    
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
             section
                 h3 Join Our Volunteer Team Today.
                 
-                a.u-blockCentered.volspot(href="http://vols.pt/zbJaBt?utm_source=group-badge-signups-orange")
-                    img(src="//vspot.s3.amazonaws.com/groups/sharing/button_orange.png" alt="Click to View Our Sign-ups on VolunteerSpot")
+                a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
         
         li.PromotionItem
             section
                 h3 Festival Artwork Chosen
                 
                 p
-                    a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
+                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
             
             .ArrowNav
                 a(href="#") >
 
-        //- DISPLAY WHEN ARTWORK CHOSEN
-        //- li.PromotionItem
-        //-     section
-        //-         h3 Festival Artwork Chosen
-        //-         
-        //-         p
-        //-             a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
-        //-     
-        //-     .ArrowNav
-        //-         a(href="#") >
 
         li.PromotionItem.alt-secondary
             section
