--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,7 +1,9 @@
 // COLOR FAMILY
 $brand-white: rgb(245, 245, 245);
+$brand-black: rgb(10, 10, 10);
 $brand-yellow: rgb(254, 202, 56);
 $brand-green: rgb(159, 199, 90);
+$brand-grey: rgb(110, 110, 110);
 $brand-grey-dark: rgb(45, 45, 45);
 
 $link-color: $brand-green;
